--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "mongoose": "^6.6.7",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.7",
     "promise-mysql": "^5.2.0"
